--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 .navigationlink{
   list-style: none;
   display: flex;
-  font-size: 24px;
+  font-size: 28px;
 }
 .navigationlink li{
   display: inline;
@@ -58,14 +58,14 @@ p{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 250px 0;
-  margin: 50px;
+  margin: 150px;
+  flex-wrap: wrap;
 }
 .introdescription{
   display: flex;
   flex-direction: column;
   text-align: right;
-  font-size: 48px;
+  font-size: 64px;
   color: #5E3B63;
   font-weight: bold;
 }
@@ -116,6 +116,7 @@ h1{
   border-radius: 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   overflow: hidden;
+  text-align: center;
 }
 .backend{
   background-color: #7B5D87;
@@ -123,6 +124,7 @@ h1{
   padding: 30px 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   overflow: hidden;
+  text-align: center;
 }
 .design{
   background-color: #AE899F;
@@ -130,6 +132,7 @@ h1{
   padding: 20px 30px 10px 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   overflow: hidden;
+  text-align: center;
 }
 .smalltext{
   padding-top: 30px;
