--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@
 p{
   padding-top: 20px;
   font-size: 22px;
+  line-height: 2;
 }
 .intro{
   display: flex;
@@ -92,27 +93,26 @@ h1{
 }
 .about{
   background-color: #7B5D87;
-  padding: 50px;
+  padding: 90px;
   color: #FFFFFF;
   width: 50%;
 }
 .skills{
   background-color: #5E3B63;
-  padding: 50px;
+  padding: 90px;
   color: #FFFFFF;
-  margin: 0;
   width: 50%;
 }
 .skillsbody{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 50px;
-  padding: 10px;
+  gap: 100px;
+  padding: 50px;
 }
 .frontend{
   background-color: #A288A6;
-  padding: 20px 50px 10px 50px;
+  padding: 20px 70px 20px 70px;
   border-radius: 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   overflow: hidden;
@@ -121,7 +121,7 @@ h1{
 .backend{
   background-color: #7B5D87;
   border-radius: 50px;
-  padding: 30px 50px;
+  padding: 30px 80px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   text-align: center;
@@ -129,7 +129,7 @@ h1{
 .design{
   background-color: #AE899F;
   border-radius: 50px;
-  padding: 20px 30px 10px 30px;
+  padding: 20px 50px 20px 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   text-align: center;
