--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,10 @@
   cursor: pointer;
   color: #FFFFFF;
 }
+a{
+  text-decoration: none;
+  color: #FFFFFF;
+}
 @media (max-width: 768px) {
   .navigationlink {
     display: none;
@@ -41,7 +45,7 @@
     right: 20px;
     background-color: #A288A6;
     padding: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
   }
   .navigationlink.show {
     display: flex; 
