--- a/styles.css
+++ b/styles.css
@@ -194,3 +194,25 @@ h2{
   font-size: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
+.contact{
+  background-color: #AE899F;
+  padding: 30px 75px;
+  text-align: center;
+  color: #FFFFFF;
+  line-height: 2;
+}
+.photos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  padding: 20px;
+}
+#contactheader{
+  font-size: 28px;
+  padding: 0;
+  font-weight: normal;
+}
+h5{
+  font-weight:normal;
+}
