adjusted resizing of images

--- a/styles.css
+++ b/styles.css
@@ -84,19 +84,26 @@ p{
   color: #5E3B63;
   font-weight: bold;
   flex: 1 1 480px;
-  font-size:clamp(32px, 5vw, 68px);
+  font-size:clamp(32px, 10vw, 72px);
 }
 .profile-pic {
-  width: clamp(150px, 18vw, 500px);
+  width: clamp(300px, 10vw, 300px);
   height: auto;
   max-width: 100%;
   flex: 0 0 auto;
 }
 .loading-bar {
-  width: clamp(300px, 40vw, 700px);
+  width: clamp(300px, 100vw, 800px);
   height: auto;
   max-width: 100%;
   align-self: flex-end;
+}
+.projectimg{
+  width: clamp(550px, 100vw, 1100px);
+  height: auto;
+  max-width: 100%;
+  flex: 0 0 auto;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 @media (max-width: 768px) {
   .intro {
@@ -112,7 +119,10 @@ p{
     width: 100%;
   }
   .profile-pic{
-    width: 60%
+    width: 50%;
+  }
+  .projectimg{
+    width: 100%;
   }
 }
 .divider{
