--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,8 @@ p{
   flex: 0 0 auto;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
-@media (max-width: 768px) {
+@media (max-width: 768px) 
+{
   .intro {
     flex-direction: column;
     align-items: center;
@@ -122,15 +123,22 @@ p{
     width: 50%;
   }
   .projectimg{
-    width: 100%;
+    width: 75%;
+  }
+  p{
+    font-size: 18px;
+    max-width: 300px;
+  }
+  .projectdesc{
+    max-width: 300px;
+    font-size: 18px;
   }
 }
-.divider{
+.divider{}
   color: #A288A6;
   height: 25px;
   background-color: #A288A6;
   border: none;
-}
 .underline{
   height: 3px;
   background-color: #FFFFFF;
@@ -208,7 +216,7 @@ h2{
 }
 .projectdesc{
   padding-bottom: 30px;
-  max-width:950px;
+  max-width: 950px;
   margin: 5px auto;
 }
 .projectdiv2{
