--- a/styles.css
+++ b/styles.css
@@ -114,19 +114,24 @@ p{
   font-size:clamp(32px, 10vw, 72px);
 }
 .profile-pic {
-  width: clamp(300px, 10vw, 300px);
-  height: auto;
+  width: clamp(400px, 10vw, 400px);
+  height: 400px;
   max-width: 100%;
   flex: 0 0 auto;
+  border-radius: 50%;
+  object-fit: cover;
+  border-color: #A288A6;
+  border-width: 10px;
+  border-style: solid;
 }
 .loading-bar {
-  width: clamp(300px, 100vw, 800px);
+  width: clamp(300px, 100vw, 700px);
   height: auto;
   max-width: 100%;
   align-self: flex-end;
 }
 .projectimg{
-  width: clamp(550px, 100vw, 1100px);
+  width: clamp(550px, 100vw, 900px);
   height: auto;
   max-width: 100%;
   flex: 0 0 auto;
@@ -138,6 +143,8 @@ p{
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    padding-bottom: 0;
+    margin-bottom: 0;
   }
   .introdescription {
     align-items: center;
@@ -145,12 +152,17 @@ p{
   }
   .loading-bar {
     width: 100%;
+    max-width: 400px;
+    transform: scale(1.3);
+    height: auto;
+    padding-top: 20px;
   }
   .profile-pic{
-    width: 50%;
+    width: 100%;
+    height: 100%;
   }
   .projectimg{
-    width: 75%;
+    width: 100%;
   }
   p{
     font-size: 18px;
