--- a/styles.css
+++ b/styles.css
@@ -89,16 +89,15 @@ html, body {
 }
 p{
   padding-top: 20px;
-  font-size: 22px;
+  font-size: 20px;
   line-height: 2;
 }
 .intro{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 60px auto;
-  gap: 50px;
-  padding: 165px 70px;
+  margin: 40px 65px;
+  padding: 165px 80px;
   max-width: 100%;
   overflow: hidden;
 }
@@ -111,11 +110,11 @@ p{
   color: #5E3B63;
   font-weight: bold;
   flex: 1 1 480px;
-  font-size:clamp(32px, 10vw, 72px);
+  font-size:clamp(32px, 10vw, 65px);
 }
 .profile-pic {
-  width: clamp(400px, 10vw, 400px);
-  height: 400px;
+  width: clamp(300px, 10vw, 300px);
+  height: 300px;
   max-width: 100%;
   flex: 0 0 auto;
   border-radius: 50%;
@@ -125,13 +124,13 @@ p{
   border-style: solid;
 }
 .loading-bar {
-  width: clamp(300px, 100vw, 700px);
+  width: clamp(300px, 100vw, 500px);
   height: auto;
   max-width: 100%;
   align-self: flex-end;
 }
 .projectimg{
-  width: clamp(550px, 100vw, 900px);
+  width: clamp(550px, 100vw, 700px);
   height: auto;
   max-width: 100%;
   flex: 0 0 auto;
@@ -220,13 +219,13 @@ h1{
 }
 .about{
   background-color: #7B5D87;
-  padding: 90px;
+  padding: 70px;
   color: #FFFFFF;
   flex: 1 1 50%;
 }
 .skills{
   background-color: #5E3B63;
-  padding: 90px;
+  padding: 50px;
   color: #FFFFFF;
   flex: 1 1 50%;
 }
@@ -380,7 +379,7 @@ button{
   padding: 20px;
 }
 #contactheader{
-  font-size: 28px;
+  font-size: 24px;
   padding: 0;
   font-weight: normal;
 }
